welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:3: error: not found: value tem
	case (a,b) if (isSummer==false && temp>=60 && tem<=90) => return true
                                                      ^