welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
	(temp,isSummer) match {
	case (a,b) if (isSummer==false && temp>=60 && tem<=90) => return true
	case (a,b) if (isSummer==true && temp>=60 && temp<=100) => return true
	case (_,_) => return false
}
}
